# gpgpu_project

./: .gitignore  .vsls.json  CMakeLists.txt  draw-keypoints.py
src/: bench.cpp  harris.cpp  mandel.cpp  matrix.cpp  matrix.cu  matrix.cuh  matrix.hpp  render.cu  render.hpp  render_cpu.cpp  utils.cpp
src/cpu/: matrix.cpp  matrix.hpp  render_cpu.cpp
src/gpu/: kernels.cuh  matrix.cu  matrix.cuh  render.cu
src/gpu/kernels/: convolution2D.cu  grayscale.cu  helpers.cuh  morph.cu  sobel.cu
